--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 
 Library/CurrentLayout.dwlt
-Library
+Library/
+Library/shadercompiler-UnityShaderCompiler.exe0.log
+Temp/__Backupscenes/0.backup
+Temp/UnityLockfile
+Library/LastSceneManagerSetup.txt
+Library/CurrentLayout.dwlt
+
